# Thesis

./: CMakeLists.txt  build_test.sh
include/: sqlite_db.h
res/: binary_searcher.cpp  searcher.cpp  trie_searcher.cpp
src/: code_generator.cpp  filler.cpp  main.cpp  sqlite_db.cpp  trietree.cpp  trietree.h
test/: binary_searcher.cpp  sql_searcher.cpp  trie_searcher.cpp
